<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Match Numbers</string>
    <string name="title_activity_game">Match Numbers</string>
    <string name="title_game_won">Game over</string>
    <string name="text_game_over">Congratulations!\nYou matched every number!</string>
    
    <string name="button_start">Start a new game</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_exit">Exit</string>
    <string name="button_restart">Restart</string>
    <string name="button_writeout">Deal</string>
    <string name="menu_settings">Pause menu</string>
    <string name="button_loadgame">Load game</string>
    <string name="button_next">NEXT</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="button_tutorial">How to play</string>
    <string name="button_remove_scratched">Remove\nrows</string>

    <string name="game_desc">That numbers game that eveybody used to play during boring lessons</string>
    <string name="dialog_save">Name your save</string>
    <string name="dialog_file">Filename</string>
    <string name="dialog_load">Load a game</string>
    <string name="dialog_saving">Saving game…</string>
    <string name="dialog_loading">Loading game…</string>
    
    <string name="error_name_short">Filename too short</string>
    <string name="error_name_duplicate">Filename taken</string>
    <string name="error_no_saves">No saved games</string>
    <string name="error_save">Couldn\'t save file</string>
    <string name="error_load">Couldn\'t load game</string>
    <string name="error_illegal_move">Illegal move</string>
    <string name="confirm_save">Game saved</string>
    <string name="remaining">Tiles left:</string>
    <string name="default_remaining_count">27</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="image_description">Tutorial image</string>
    <string name="button_continue">Continue game</string>

</resources>