<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/game_desc" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_remaining"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_start"
        android:layout_alignRight="@+id/button_start"
        android:layout_below="@+id/button_start"
        android:text="@string/button_loadgame" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_load"
        android:layout_alignRight="@+id/button_load"
        android:layout_below="@+id/button_load"
        android:text="@string/button_exit" />

</RelativeLayout>