<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity" >

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_pause" />

        <Button
            android:id="@+id/writeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_writeout" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/writeout"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/number_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/writeout"
            android:layout_alignBottom="@+id/writeout"
            android:layout_toRightOf="@+id/text_remaining"
            android:text="@string/default_remaining_count" />

        <TextView
            android:id="@+id/text_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/number_remaining"
            android:layout_alignBottom="@+id/number_remaining"
            android:layout_toRightOf="@+id/pause"
            android:text="@string/remaining" />

    </RelativeLayout>

    <eu.j0ntech.tenpair.view.BoardView
        android:id="@+id/boardcanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_container" />

</RelativeLayout>